--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="divCorpo">
         <div>
-            <input type="text">
+            <input type="text" readonly>
         </div>
         <div class="divTeclado">
             <ul class=" divTeclado-ul divTeclado-ul1">
