--- a/index.html
+++ b/index.html
@@ -9,46 +9,49 @@
 </head>
 <body>
     <div class="divCorpo">
-        <div>
-            <input type="text" id="input" readonly>
+        <div class="divInput">
+            <h1>Teclado Virtual</h1>
+            <div id="input" contenteditable="true"></div>
         </div>
-        <div class="divTeclado">
-            <ul class="divTeclado-ul divTeclado-ul1">
-                <li class="divTeclado-ul-li" value="Q" id="teclaQ" onclick="tecla(this)">Q</li>
-                <li class="divTeclado-ul-li" value="W" id="teclaW" onclick="tecla(this)">W</li>
-                <li class="divTeclado-ul-li" value="E" id="teclaE" onclick="tecla(this)">E</li>
-                <li class="divTeclado-ul-li" value="R" id="teclaR" onclick="tecla(this)">R</li>
-                <li class="divTeclado-ul-li" value="T" id="teclaT" onclick="tecla(this)">T</li>
-                <li class="divTeclado-ul-li" value="Y" id="teclaY" onclick="tecla(this)">Y</li>
-                <li class="divTeclado-ul-li" value="U" id="teclaU" onclick="tecla(this)">U</li>
-                <li class="divTeclado-ul-li" value="I" id="teclaI" onclick="tecla(this)">I</li>
-                <li class="divTeclado-ul-li" value="O" id="teclaO" onclick="tecla(this)">O</li>
-                <li class="divTeclado-ul-li" value="P" id="teclaP" onclick="tecla(this)">P</li>
-            </ul>
-            <ul class="divTeclado-ul divTeclado-ul2">
-                <li class="divTeclado-ul-li" value="A" id="teclaA" onclick="tecla(this)">A</li>
-                <li class="divTeclado-ul-li" value="S" id="teclaS" onclick="tecla(this)">S</li>
-                <li class="divTeclado-ul-li" value="D" id="teclaD" onclick="tecla(this)">D</li>
-                <li class="divTeclado-ul-li" value="F" id="teclaF" onclick="tecla(this)">F</li>
-                <li class="divTeclado-ul-li" value="G" id="teclaG" onclick="tecla(this)">G</li>
-                <li class="divTeclado-ul-li" value="H" id="teclaH" onclick="tecla(this)">H</li>
-                <li class="divTeclado-ul-li" value="J" id="teclaJ" onclick="tecla(this)">J</li>
-                <li class="divTeclado-ul-li" value="K" id="teclaK" onclick="tecla(this)">K</li>
-                <li class="divTeclado-ul-li" value="L" id="teclaL" onclick="tecla(this)">L</li>
-                <li class="divTeclado-ul-li" value="Ç" id="teclaC" onclick="tecla(this)">Ç</li>
-            </ul>
-            <ul class="divTeclado-ul divTeclado-ul3">
-                <li class="divTeclado-ul-li" value="Z" id="teclaZ" onclick="tecla(this)">Z</li>
-                <li class="divTeclado-ul-li" value="X" id="teclaX" onclick="tecla(this)">X</li>
-                <li class="divTeclado-ul-li" value="C" id="teclaC2" onclick="tecla(this)">C</li>
-                <li class="divTeclado-ul-li" value="V" id="teclaV" onclick="tecla(this)">V</li>
-                <li class="divTeclado-ul-li" value="B" id="teclaB" onclick="tecla(this)">B</li>
-                <li class="divTeclado-ul-li" value="N" id="teclaN" onclick="tecla(this)">N</li>
-                <li class="divTeclado-ul-li" value="M" id="teclaM" onclick="tecla(this)">M</li>
-                <li class="divTeclado-ul-li" value="." id="teclaDot" onclick="tecla(this)">.</li>
-                <li class="divTeclado-ul-li" value="," id="teclaComma" onclick="tecla(this)">,</li>
-                <li class="divTeclado-ul-li" value="DEL" id="teclaQuote" onclick="del()">DEL</li>
-            </ul>
+        <div class="divTecladoContainer">
+            <div class="divTeclado">
+                <ul class="divTeclado-ul divTeclado-ul1">
+                    <li class="divTeclado-ul-li" value="Q" id="teclaQ" onclick="tecla(this)">Q</li>
+                    <li class="divTeclado-ul-li" value="W" id="teclaW" onclick="tecla(this)">W</li>
+                    <li class="divTeclado-ul-li" value="E" id="teclaE" onclick="tecla(this)">E</li>
+                    <li class="divTeclado-ul-li" value="R" id="teclaR" onclick="tecla(this)">R</li>
+                    <li class="divTeclado-ul-li" value="T" id="teclaT" onclick="tecla(this)">T</li>
+                    <li class="divTeclado-ul-li" value="Y" id="teclaY" onclick="tecla(this)">Y</li>
+                    <li class="divTeclado-ul-li" value="U" id="teclaU" onclick="tecla(this)">U</li>
+                    <li class="divTeclado-ul-li" value="I" id="teclaI" onclick="tecla(this)">I</li>
+                    <li class="divTeclado-ul-li" value="O" id="teclaO" onclick="tecla(this)">O</li>
+                    <li class="divTeclado-ul-li" value="P" id="teclaP" onclick="tecla(this)">P</li>
+                </ul>
+                <ul class="divTeclado-ul divTeclado-ul2">
+                    <li class="divTeclado-ul-li" value="A" id="teclaA" onclick="tecla(this)">A</li>
+                    <li class="divTeclado-ul-li" value="S" id="teclaS" onclick="tecla(this)">S</li>
+                    <li class="divTeclado-ul-li" value="D" id="teclaD" onclick="tecla(this)">D</li>
+                    <li class="divTeclado-ul-li" value="F" id="teclaF" onclick="tecla(this)">F</li>
+                    <li class="divTeclado-ul-li" value="G" id="teclaG" onclick="tecla(this)">G</li>
+                    <li class="divTeclado-ul-li" value="H" id="teclaH" onclick="tecla(this)">H</li>
+                    <li class="divTeclado-ul-li" value="J" id="teclaJ" onclick="tecla(this)">J</li>
+                    <li class="divTeclado-ul-li" value="K" id="teclaK" onclick="tecla(this)">K</li>
+                    <li class="divTeclado-ul-li" value="L" id="teclaL" onclick="tecla(this)">L</li>
+                    <li class="divTeclado-ul-li" value="Ç" id="teclaC" onclick="tecla(this)">Ç</li>
+                </ul>
+                <ul class="divTeclado-ul divTeclado-ul3">
+                    <li class="divTeclado-ul-li" value="Z" id="teclaZ" onclick="tecla(this)">Z</li>
+                    <li class="divTeclado-ul-li" value="X" id="teclaX" onclick="tecla(this)">X</li>
+                    <li class="divTeclado-ul-li" value="C" id="teclaC2" onclick="tecla(this)">C</li>
+                    <li class="divTeclado-ul-li" value="V" id="teclaV" onclick="tecla(this)">V</li>
+                    <li class="divTeclado-ul-li" value="B" id="teclaB" onclick="tecla(this)">B</li>
+                    <li class="divTeclado-ul-li" value="N" id="teclaN" onclick="tecla(this)">N</li>
+                    <li class="divTeclado-ul-li" value="M" id="teclaM" onclick="tecla(this)">M</li>
+                    <li class="divTeclado-ul-li" value="." id="teclaDot" onclick="tecla(this)">.</li>
+                    <li class="divTeclado-ul-li" value="," id="teclaComma" onclick="tecla(this)">,</li>
+                    <li class="divTeclado-ul-li" value="DEL" id="teclaQuote" onclick="del()">DEL</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
