--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="divCorpo">
         <div class="divInput">
             <h1>Teclado Virtual</h1>
-            <div id="input"></div>
+            <input id="input"></input>
         </div>
         <div class="divTecladoContainer">
             <div class="divTeclado">
